--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,7 @@
 kaggle_competition: 'riiid-test-answer-prediction'
 
-file_path: 'data/raw/IMDB Dataset.csv'
-test_size: 0.2
-split_seed: 42
+# sample_data
+frac: 0.0125
+seed: 3
+
+target: 'answered_correctly'
