Comment out submission stage

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -27,8 +27,9 @@ stages:
     outs:
       - data/submission/submission.csv
 
-  submission:
-    cmd: kaggle competitions submit
-      tabular-playground-series-jan-2021
-      -f data/submission/submission.csv
-      -m "LightGBM"
+# You may submit a maximum of 5 entries per day.
+#  submission:
+#    cmd: kaggle competitions submit
+#      tabular-playground-series-jan-2021
+#      -f data/submission/submission.csv
+#      -m "LightGBM"
