PCA experimentation: scaling + variance of the input

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -12,14 +12,25 @@ stages:
     - data/raw/train.csv:
         cache: false
 
+  scale:
+    cmd: python src/data/scale.py
+    params:
+      - features
+    deps:
+      - data/raw/train.csv
+    outs:
+      - data/interim/train_scaled.csv:
+          cache: false
+
   pca:
     cmd: python src/data/pca.py
     params:
       - n_components
     deps:
-      - data/raw/train.csv
+      - data/interim/train_scaled.csv
     outs:
-      - data/interim/train_pca.csv
+      - data/interim/train_pca.csv:
+          cache: false
 
   lgbm_modelling:
     cmd: python src/model/lgbm.py
