--- a/dvc.yaml
+++ b/dvc.yaml
@@ -13,7 +13,7 @@ stages:
         cache: false
 
   scale:
-    cmd: python src/data/scale.py
+    cmd: python src/data/scale.py -f data/raw/train.csv
     params:
       - features
     deps:
@@ -29,17 +29,27 @@ stages:
     outs:
       - models/lgbm/model.txt
 
-#  lgbm_inference:
-#    cmd: python src/inference/lgbm_inf.py
-#    deps:
-#      - models/lgbm/model.txt
-#      - data/raw/test.csv
-#    outs:
-#      - data/submission/submission.csv
+  scale_test:
+    cmd: python src/data/scale.py -f data/raw/test.csv
+    params:
+      - features
+    deps:
+      - data/raw/test.csv
+    outs:
+      - data/interim/test_scaled.csv:
+          cache: false
+
+  lgbm_inference:
+    cmd: python src/inference/lgbm_inf.py
+    deps:
+      - models/lgbm/model.txt
+      - data/interim/test_scaled.csv
+    outs:
+      - data/submission/submission.csv
 
 # You may submit a maximum of 5 entries per day.
-#  submission:
-#    cmd: kaggle competitions submit
-#      tabular-playground-series-jan-2021
-#      -f data/submission/submission.csv
-#      -m "LightGBM"
+  submission:
+    cmd: kaggle competitions submit
+      tabular-playground-series-jan-2021
+      -f data/submission/submission.csv
+      -m "LightGBM"
