--- a/params.yaml
+++ b/params.yaml
@@ -1,17 +1,17 @@
 kaggle_competition: 'tabular-playground-series-jan-2021'
 
 features:
-  - 'cont1'
+#  - 'cont1'
   - 'cont2'
   - 'cont3'
   - 'cont4'
-  - 'cont5'
+#  - 'cont5'
   - 'cont6'
   - 'cont7'
   - 'cont8'
-  - 'cont9'
-  - 'cont10'
+#  - 'cont9'
+#  - 'cont10'
   - 'cont11'
   - 'cont12'
-  - 'cont13'
-  - 'cont14'
+#  - 'cont13'
+#  - 'cont14'
