--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,25 @@
 kaggle_competition: 'tabular-playground-series-jan-2021'
+
+features_to_logarithm:
+  - "cont6"
+  - "cont8"
+  - "cont13"
+
+features:
+  - 'cont1'
+  - 'cont2'
+  - 'cont3'
+  - 'cont4'
+  - 'cont5'
+#  - 'cont6'
+  - 'cont6_logarithm'
+  - 'cont7'
+#  - 'cont8'
+  - 'cont8_logarithm'
+  - 'cont9'
+  - 'cont10'
+  - 'cont11'
+  - 'cont12'
+#  - 'cont13'
+  - 'cont13_logarithm'
+  - 'cont14'
