--- a/dvc.yaml
+++ b/dvc.yaml
@@ -33,7 +33,7 @@ stages:
           cache: false
 
   scaling:
-    cmd: python src/feature/scaling_standard.py
+    cmd: python src/feature/scaling.py
     params:
       - features
     deps:
@@ -65,8 +65,8 @@ stages:
       - data/submission/submission.csv
 
 # You may submit a maximum of 5 entries per day.
-#  submission:
-#    cmd: kaggle competitions submit
-#      tabular-playground-series-jan-2021
-#      -f data/submission/submission.csv
-#      -m "LightGBM"
+  submission:
+    cmd: kaggle competitions submit
+      tabular-playground-series-jan-2021
+      -f data/submission/submission.csv
+      -m "LightGBM"
