16 most important features only

--- a/params.yaml
+++ b/params.yaml
@@ -25,202 +25,19 @@ features_to_div:
   - 'cont14'
 
 features:
-  - 'cont1'
-  - 'cont2'
   - 'cont3'
-  - 'cont4'
-  - 'cont5'
-#  - 'cont6'
-  - 'cont6_logarithm'
-  - 'cont7'
-#  - 'cont8'
-  - 'cont8_logarithm'
-  - 'cont9'
-  - 'cont10'
-  - 'cont11'
-  - 'cont12'
-#  - 'cont13'
+  - 'cont2'
   - 'cont13_logarithm'
+  - 'cont4'
+  - 'cont7'
   - 'cont14'
-  - "cont1_div_cont2"
-  - "cont1_div_cont3"
-  - "cont1_div_cont4"
-  - "cont1_div_cont5"
-  - "cont1_div_cont6_logarithm"
-  - "cont1_div_cont7"
-  - "cont1_div_cont8_logarithm"
-  - "cont1_div_cont9"
-  - "cont1_div_cont10"
-  - "cont1_div_cont11"
-  - "cont1_div_cont12"
-  - "cont1_div_cont13_logarithm"
-  - "cont1_div_cont14"
-  - "cont2_div_cont1"
-  - "cont2_div_cont3"
-  - "cont2_div_cont4"
-  - "cont2_div_cont5"
-  - "cont2_div_cont6_logarithm"
-  - "cont2_div_cont7"
-  - "cont2_div_cont8_logarithm"
-  - "cont2_div_cont9"
-  - "cont2_div_cont10"
-  - "cont2_div_cont11"
-  - "cont2_div_cont12"
-  - "cont2_div_cont13_logarithm"
-  - "cont2_div_cont14"
-  - "cont3_div_cont1"
-  - "cont3_div_cont2"
-  - "cont3_div_cont4"
-  - "cont3_div_cont5"
-  - "cont3_div_cont6_logarithm"
-  - "cont3_div_cont7"
-  - "cont3_div_cont8_logarithm"
-  - "cont3_div_cont9"
-  - "cont3_div_cont10"
-  - "cont3_div_cont11"
-  - "cont3_div_cont12"
-  - "cont3_div_cont13_logarithm"
-  - "cont3_div_cont14"
-  - "cont4_div_cont1"
-  - "cont4_div_cont2"
-  - "cont4_div_cont3"
-  - "cont4_div_cont5"
-  - "cont4_div_cont6_logarithm"
-  - "cont4_div_cont7"
-  - "cont4_div_cont8_logarithm"
-  - "cont4_div_cont9"
-  - "cont4_div_cont10"
-  - "cont4_div_cont11"
-  - "cont4_div_cont12"
-  - "cont4_div_cont13_logarithm"
-  - "cont4_div_cont14"
-  - "cont5_div_cont1"
-  - "cont5_div_cont2"
-  - "cont5_div_cont3"
-  - "cont5_div_cont4"
-  - "cont5_div_cont6_logarithm"
-  - "cont5_div_cont7"
-  - "cont5_div_cont8_logarithm"
-  - "cont5_div_cont9"
-  - "cont5_div_cont10"
-  - "cont5_div_cont11"
-  - "cont5_div_cont12"
-  - "cont5_div_cont13_logarithm"
-  - "cont5_div_cont14"
-  - "cont6_logarithm_div_cont1"
-  - "cont6_logarithm_div_cont2"
-  - "cont6_logarithm_div_cont3"
-  - "cont6_logarithm_div_cont4"
-  - "cont6_logarithm_div_cont5"
-  - "cont6_logarithm_div_cont7"
-  - "cont6_logarithm_div_cont8_logarithm"
-  - "cont6_logarithm_div_cont9"
-  - "cont6_logarithm_div_cont10"
-  - "cont6_logarithm_div_cont11"
-  - "cont6_logarithm_div_cont12"
-  - "cont6_logarithm_div_cont13_logarithm"
-  - "cont6_logarithm_div_cont14"
-  - "cont7_div_cont1"
-  - "cont7_div_cont2"
-  - "cont7_div_cont3"
-  - "cont7_div_cont4"
-  - "cont7_div_cont5"
-  - "cont7_div_cont6_logarithm"
-  - "cont7_div_cont8_logarithm"
-  - "cont7_div_cont9"
-  - "cont7_div_cont10"
-  - "cont7_div_cont11"
-  - "cont7_div_cont12"
-  - "cont7_div_cont13_logarithm"
-  - "cont7_div_cont14"
-  - "cont8_logarithm_div_cont1"
-  - "cont8_logarithm_div_cont2"
-  - "cont8_logarithm_div_cont3"
-  - "cont8_logarithm_div_cont4"
-  - "cont8_logarithm_div_cont5"
-  - "cont8_logarithm_div_cont6_logarithm"
-  - "cont8_logarithm_div_cont7"
-  - "cont8_logarithm_div_cont9"
-  - "cont8_logarithm_div_cont10"
-  - "cont8_logarithm_div_cont11"
-  - "cont8_logarithm_div_cont12"
-  - "cont8_logarithm_div_cont13_logarithm"
-  - "cont8_logarithm_div_cont14"
-  - "cont9_div_cont1"
-  - "cont9_div_cont2"
-  - "cont9_div_cont3"
-  - "cont9_div_cont4"
-  - "cont9_div_cont5"
-  - "cont9_div_cont6_logarithm"
-  - "cont9_div_cont7"
-  - "cont9_div_cont8_logarithm"
-  - "cont9_div_cont10"
-  - "cont9_div_cont11"
-  - "cont9_div_cont12"
-  - "cont9_div_cont13_logarithm"
-  - "cont9_div_cont14"
-  - "cont10_div_cont1"
-  - "cont10_div_cont2"
-  - "cont10_div_cont3"
-  - "cont10_div_cont4"
-  - "cont10_div_cont5"
-  - "cont10_div_cont6_logarithm"
-  - "cont10_div_cont7"
-  - "cont10_div_cont8_logarithm"
-  - "cont10_div_cont9"
-  - "cont10_div_cont11"
-  - "cont10_div_cont12"
-  - "cont10_div_cont13_logarithm"
-  - "cont10_div_cont14"
-  - "cont11_div_cont1"
-  - "cont11_div_cont2"
-  - "cont11_div_cont3"
-  - "cont11_div_cont4"
-  - "cont11_div_cont5"
-  - "cont11_div_cont6_logarithm"
-  - "cont11_div_cont7"
-  - "cont11_div_cont8_logarithm"
-  - "cont11_div_cont9"
-  - "cont11_div_cont10"
-  - "cont11_div_cont12"
-  - "cont11_div_cont13_logarithm"
-  - "cont11_div_cont14"
-  - "cont12_div_cont1"
-  - "cont12_div_cont2"
-  - "cont12_div_cont3"
-  - "cont12_div_cont4"
-  - "cont12_div_cont5"
-  - "cont12_div_cont6_logarithm"
-  - "cont12_div_cont7"
-  - "cont12_div_cont8_logarithm"
-  - "cont12_div_cont9"
-  - "cont12_div_cont10"
-  - "cont12_div_cont11"
-  - "cont12_div_cont13_logarithm"
-  - "cont12_div_cont14"
-  - "cont13_logarithm_div_cont1"
-  - "cont13_logarithm_div_cont2"
-  - "cont13_logarithm_div_cont3"
-  - "cont13_logarithm_div_cont4"
-  - "cont13_logarithm_div_cont5"
-  - "cont13_logarithm_div_cont6_logarithm"
-  - "cont13_logarithm_div_cont7"
-  - "cont13_logarithm_div_cont8_logarithm"
-  - "cont13_logarithm_div_cont9"
-  - "cont13_logarithm_div_cont10"
-  - "cont13_logarithm_div_cont11"
-  - "cont13_logarithm_div_cont12"
-  - "cont13_logarithm_div_cont14"
-  - "cont14_div_cont1"
-  - "cont14_div_cont2"
-  - "cont14_div_cont3"
-  - "cont14_div_cont4"
-  - "cont14_div_cont5"
-  - "cont14_div_cont6_logarithm"
-  - "cont14_div_cont7"
-  - "cont14_div_cont8_logarithm"
-  - "cont14_div_cont9"
-  - "cont14_div_cont10"
-  - "cont14_div_cont11"
-  - "cont14_div_cont12"
-  - "cont14_div_cont13_logarithm"
+  - 'cont1'
+  - 'cont10'
+  - 'cont4_div_cont11'
+  - 'cont12'
+  - 'cont11'
+  - 'cont12_div_cont13_logarithm'
+  - 'cont5'
+  - 'cont6_logarithm'
+  - 'cont9'
+  - 'cont8_logarithm'
