--- a/params.yaml
+++ b/params.yaml
@@ -41,3 +41,16 @@ features:
   - 'cont6_logarithm'
   - 'cont9'
   - 'cont8_logarithm'
+  - 'cont13_logarithm_div_cont4'
+  - 'cont4_div_cont12'
+  - 'cont11_div_cont13_logarithm'
+  - 'cont13_logarithm_div_cont10'
+  - 'cont2_div_cont1'
+  - 'cont1_div_cont6_logarithm'
+  - 'cont2_div_cont13_logarithm'
+  - 'cont13_logarithm_div_cont11'
+  - 'cont13_logarithm_div_cont6_logarithm'
+  - 'cont10_div_cont13_logarithm'
+  - 'cont1_div_cont12'
+  - 'cont14_div_cont13_logarithm'
+  - 'cont4_div_cont13_logarithm'
